--- a/portfolio/B19/css/style.css
+++ b/portfolio/B19/css/style.css
@@ -5466,6 +5466,226 @@ h6 {
      object-fit: cover;
 }
 
+.toparea {
+  position: relative;
+}
+
+.toparea__background {
+  position: absolute;
+  top: 115px;
+  left: 0;
+}
+
+.toparea__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  line-height: 1.21875;
+}
+
+.toparea__title {
+  margin-top: 1.875rem;
+  margin-left: 1.875rem;
+  max-width: 567px;
+}
+
+.toparea__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: -5.53125rem;
+}
+
+.toparea__text {
+  margin-top: 6.875rem;
+  max-width: 675px;
+  position: relative;
+  z-index: 2;
+}
+
+.toparea__image {
+  position: relative;
+  z-index: 2;
+  margin-right: -6.25rem;
+  margin-top: -3.625rem;
+}
+
+.toparea__label {
+  padding: 0.8125rem 0rem;
+  background-color: #FFD600;
+  max-width: 656px;
+  position: relative;
+  margin-top: -7.3125rem;
+}
+
+.toparea__label::before {
+  content: "";
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  width: 1000vmax;
+  height: 100%;
+  background-color: #FFD600;
+  z-index: -1;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.toparea__item {
+  position: relative;
+  padding-left: 1.375rem;
+  margin-bottom: 0.5rem;
+}
+
+.toparea__item::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-image: url(../img/topm/point.svg);
+  width: 12px;
+  height: 12px;
+}
+
+.toparea__item:last-child {
+  margin-bottom: 0rem;
+}
+
+.label-toparea__label {
+  margin-bottom: 0.5625rem;
+}
+
+.label-toparea__label h4 {
+  font-weight: 800;
+  font-style: italic;
+  font-size: 2.25rem;
+  line-height: 1.2188888889;
+}
+
+.benefitsarea {
+  background-image: url(../img/benefitsarea/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.benefitsarea__body {
+  padding: 3.75rem 0rem;
+  line-height: 1.21875;
+}
+
+.benefitsarea__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -0.9375rem -0.9375rem;
+}
+
+.row-benefitsarea__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 606px;
+          flex: 0 0 606px;
+  padding: 0.9375rem 0.9375rem;
+  min-height: 125px;
+}
+
+.row-benefitsarea__item.item1 {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.row-benefitsarea__item.item2 {
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+}
+
+.row-benefitsarea__item.item3 {
+  -webkit-box-ordinal-group: 6;
+      -ms-flex-order: 5;
+          order: 5;
+}
+
+.row-benefitsarea__item.item4 {
+  -webkit-box-ordinal-group: 8;
+      -ms-flex-order: 7;
+          order: 7;
+}
+
+.row-benefitsarea__item.item5 {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.row-benefitsarea__item.item6 {
+  -webkit-box-ordinal-group: 5;
+      -ms-flex-order: 4;
+          order: 4;
+}
+
+.row-benefitsarea__item.item7 {
+  -webkit-box-ordinal-group: 7;
+      -ms-flex-order: 6;
+          order: 6;
+}
+
+.item-benefitsarea__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  position: relative;
+  min-height: 125px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.item-benefitsarea__number {
+  margin-left: 2.9375rem;
+}
+
+.item-benefitsarea__number p {
+  font-weight: 900;
+  color: #fff;
+  font-size: 4.625rem;
+  line-height: 1.2162162162;
+  text-shadow: 0 -1px 0 #000000, 0 -1px 0 #000000, 0 1px 0 #000000, 0 1px 0 #000000, -1px 0 0 #000000, 1px 0 0 #000000, -1px 0 0 #000000, 1px 0 0 #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000;
+}
+
+.item-benefitsarea__text {
+  max-width: 420px;
+  margin-left: 2.6875rem;
+  position: relative;
+  z-index: 2;
+}
+
+.item-benefitsarea__image {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .swiper {
   overflow: hidden;
 }
@@ -6336,6 +6556,10 @@ button.swiper-pagination-bullet {
   .topm__label {
     max-width: 550px;
   }
+
+  .toparea__text {
+    max-width: 675px;
+  }
 }
 
 @media (max-width: 84em) {
@@ -6872,6 +7096,65 @@ button.swiper-pagination-bullet {
   .item-infob__image {
     margin-right: -1.875rem;
     padding-left: 0.625rem;
+  }
+
+  .toparea__background {
+    top: 216px;
+  }
+
+  .toparea__title {
+    max-width: 500px;
+    margin-left: 0rem;
+  }
+
+  .toparea__title h1 {
+    font-size: 2.1875rem;
+  }
+
+  .toparea__block {
+    margin-top: -9.1875rem;
+  }
+
+  .toparea__text {
+    margin-top: 10.625rem;
+    max-width: 400px;
+  }
+
+  .toparea__image {
+    margin-top: 2rem;
+  }
+
+  .toparea__image img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: bottom bottom;
+       object-position: bottom bottom;
+  }
+
+  .toparea__label {
+    margin-top: -5rem;
+  }
+
+  .toparea__label {
+    margin-top: 0rem;
+    max-width: 100%;
+  }
+
+  .row-benefitsarea__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 500px;
+            flex: 0 0 500px;
+  }
+
+  .item-benefitsarea__number {
+    margin-left: 1.875rem;
+  }
+
+  .item-benefitsarea__text {
+    margin-left: 1.875rem;
+    max-width: 400;
   }
 }
 
@@ -7477,6 +7760,87 @@ button.swiper-pagination-bullet {
     margin-left: -1.25rem;
     margin-bottom: 1.875rem;
     padding-left: 0rem;
+  }
+
+  .toparea__background {
+    top: 158px;
+  }
+
+  .toparea__title {
+    max-width: 409px;
+  }
+
+  .toparea__block {
+    margin-top: -8rem;
+  }
+
+  .benefitsarea__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .benefitsarea__row {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .row-benefitsarea__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 606px;
+            flex: 0 1 606px;
+  }
+
+  .row-benefitsarea__item.item1 {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+
+  .row-benefitsarea__item.item2 {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+
+  .row-benefitsarea__item.item3 {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+
+  .row-benefitsarea__item.item4 {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+
+  .row-benefitsarea__item.item5 {
+    -webkit-box-ordinal-group: 6;
+        -ms-flex-order: 5;
+            order: 5;
+  }
+
+  .row-benefitsarea__item.item6 {
+    -webkit-box-ordinal-group: 7;
+        -ms-flex-order: 6;
+            order: 6;
+  }
+
+  .row-benefitsarea__item.item7 {
+    -webkit-box-ordinal-group: 8;
+        -ms-flex-order: 7;
+            order: 7;
+  }
+
+  .item-benefitsarea__number {
+    font-size: 4rem;
+    line-height: 1.21875;
+    margin-right: 1.75rem;
   }
 }
 
@@ -8467,6 +8831,72 @@ button.swiper-pagination-bullet {
   .item-infob__text:nth-child(3) {
     max-width: 100%;
   }
+
+  .toparea__background {
+    display: none;
+  }
+
+  .toparea__container {
+    padding: 0rem 0rem 0rem 0rem;
+  }
+
+  .toparea__body {
+    font-size: 0.875rem;
+    line-height: 1.2142857143;
+  }
+
+  .toparea__title {
+    max-width: 100%;
+  }
+
+  .toparea__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .toparea__text {
+    max-width: 100%;
+    margin-bottom: 2.5rem;
+    padding: 0rem 1.875rem;
+  }
+
+  .toparea__image {
+    left: 50%;
+    width: 800px;
+    height: 350px;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    margin-top: 0rem;
+  }
+
+  .toparea__list {
+    padding-left: 3.625rem;
+  }
+
+  .label-toparea__label h4 {
+    font-size: 1.5rem;
+    line-height: 1.2191666667;
+  }
+
+  .benefitsarea {
+    background: none;
+  }
+
+  .benefitsarea__container {
+    padding: 0rem 0rem 0rem 0rem;
+  }
+
+  .benefitsarea__body {
+    padding: 2rem 0rem;
+  }
+
+  .item-benefitsarea__text {
+    font-size: 0.875rem;
+    line-height: 1.2142857143;
+  }
 }
 
 @media (max-width: 40.625em) {
@@ -8824,6 +9254,10 @@ button.swiper-pagination-bullet {
 
   .row-newlvl__item {
     width: 170px;
+  }
+
+  .toparea__image {
+    width: 600px;
   }
 }
 
